check_output_5.txt
    Blocking waiting for file lock on build directory
   Compiling siren v0.4.0 (C:\Users\pixel\Downloads\twister)
error: environment variable `SLINT_INCLUDE_GENERATED` not defined at compile time
  --> src\main.rs:21:1
   |
21 | slint::include_modules!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: use `std::env::var("SLINT_INCLUDE_GENERATED")` to read the variable at run time
   = note: this error originates in the macro `env` which comes from the expansion of the macro `slint::include_modules` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find type `AppWindow` in this scope
   --> src\main.rs:565:10
    |
565 |     ui: &AppWindow,
    |          ^^^^^^^^^ not found in this scope

warning: unused import: `RtlSdrDevice`
  --> src\training.rs:11:47
   |
11 | use crate::rtlsdr::{MAX_FREQ_HZ, MIN_FREQ_HZ, RtlSdrDevice, RtlSdrEngine};
   |                                               ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `AtomicBool`
  --> src\training.rs:16:25
   |
16 | use std::sync::atomic::{AtomicBool, Ordering};
   |                         ^^^^^^^^^^

error[E0433]: cannot find type `AppWindow` in this scope
  --> src\main.rs:93:14
   |
93 |     let ui = AppWindow::new().context("Slint window creation failed")?;
   |              ^^^^^^^^^ use of undeclared type `AppWindow`

warning: unused variable: `nx`
   --> src\anc.rs:133:13
    |
133 |         let nx = speaker_out.len().min(n);
    |             ^^ help: if this is intentional, prefix it with an underscore: `_nx`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `ny`
   --> src\anc.rs:134:13
    |
134 |         let ny = mic_in.len().min(n);
    |             ^^ help: if this is intentional, prefix it with an underscore: `_ny`

warning: unused variable: `batcher`
   --> src\training.rs:274:13
    |
274 |         let batcher = MambaBatcher::<B>::new(self.device.clone());
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_batcher`

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
warning: `siren` (bin "siren") generated 5 warnings
error: could not compile `siren` (bin "siren") due to 3 previous errors; 5 warnings emitted
